# Forecasting-Through-Meteorological-Reasoning

./: .gitignore  COMPUTE.md  README.md  RUN_PLAN.md  TUTORIAL.md  eval.ipynb  train.ipynb
src/: README.md  RESULTS.md  pyproject.toml  requirements.txt
src/asgwm/: __init__.py  interventions.py  physics.py
src/asgwm/asg/: __init__.py  grammar.py  render_nl.py  schema.py
src/asgwm/baselines/: __init__.py  adapters.py  base.py
src/asgwm/data/: __init__.py  advection.py  dataset.py  mrms.py  nexrad.py  normalize.py  ood_resample.py  sevir.py
src/asgwm/eval/: __init__.py  ablation.py  capacity.py  faithfulness.py  forecast.py  harness.py  metrics.py  regime_eval.py
src/asgwm/labeling/: __init__.py  context.py  motion.py  pipeline.py  regime.py  tracking.py
src/asgwm/models/: __init__.py  bottleneck.py  prompts.py  stage_a2_tracker.py  stage_a_vlm.py  stage_b_transition.py  stage_c_renderer.py  unet.py  vae.py
src/asgwm/symbolic/: __init__.py  (+1 more)
src/configs/: default.yaml
src/notebooks/: run_all_colab_A100_runtime1.ipynb  run_all_colab_A100_runtime2.ipynb
src/scripts/: 00_download_data.py  01_autolabel.py  10_train_tier0.py  20_train_tier1_curriculum.py  30_train_tier2.py  40_eval_skill.py  41_eval_faithfulness.py  42_make_figures.py  43_admissibility_demo.py  99_preflight.py
src/tests/: conftest.py  test_admissibility.py  test_asg_grammar.py  test_baselines.py  test_capacity.py  test_datasets.py  test_interventions.py  test_motion_units.py  test_normalize.py  test_ood_resample.py  test_physics.py  test_skill_upgrades.py  test_smoke_pipeline.py
(+27 files in other folders)
