[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asgwm"
version = "0.1.0"
description = "ASG-WM: Atmospheric Scene Graph world model for faithful precipitation nowcasting"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "FaithCast / ASG-WM authors" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["asgwm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
